@@ -5,9 +5,12 @@ import br.com.api.petpoints.shared.enums.TipoPagamentoEnum;
 import br.com.api.petpoints.shared.features.payment.dto.MercadoPagoDto;
 import br.com.api.petpoints.shared.features.payment.dto.PagamentoDto;
 import br.com.api.petpoints.shared.models.PagamentoModel;
+import br.com.api.petpoints.shared.models.UsuarioModel;
 import br.com.api.petpoints.shared.repository.PagamentoRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import lombok.extern.slf4j.Slf4j;
+import org.jspecify.annotations.NonNull;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -15,6 +18,7 @@ import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.util.List;
 
+@Slf4j
 @Service
 public class PagamentoService {
 
@@ -27,19 +31,42 @@ public class PagamentoService {
         this.pagamentoRepository = pagamentoRepository;
     }
 
-    /** Cria a order PIX no MP, persiste o pagamento e devolve o QR para o front. */
+    /**
+     * Cria uma cobrança PIX utilizando o Mercado Pago e persiste as informações
+     * do pagamento em banco de dados.
+     * <p>
+     * O fluxo consiste em:
+     * <ol>
+     *     <li>Criar a ordem de pagamento no Mercado Pago;</li>
+     *     <li>Persistir o pagamento localmente;</li>
+     *     <li>Retornar os dados necessários para pagamento via PIX.</li>
+     * </ol>
+     *
+     * @param form Dados necessários para criação da cobrança.
+     * @return Informações da cobrança PIX.
+     */
     @Transactional
-    public PagamentoDto.PagamentoPixResponse criarPagamentoPix(PagamentoDto.CriarPagamentoPixForm form) {
+    public PagamentoDto.PagamentoPixResponse criarPagamentoPix(PagamentoDto.CriarPagamentoPixForm form, UsuarioModel usuario) {
+
+        log.info(
+                "Iniciando geração de pagamento PIX. Consulta: {}, CPF: {}, Valor: {}",
+                form.externalReference(),
+                form.cpf(),
+                form.valor());
+
         String valorFormatado = formatarValor(form.valor());
 
-        // 1) Monta o corpo da requisição para o Mercado Pago
         var request = new MercadoPagoDto.OrderRequest(
                 "online",
                 form.externalReference(),
                 "automatic",
                 valorFormatado,
                 form.descricao(),
-                new MercadoPagoDto.OrderRequest.Payer(form.emailPagador(), form.nomePagador()),
+                new MercadoPagoDto.OrderRequest.Payer(
+                        form.emailPagador(),
+                        form.nomePagador(),
+                        new MercadoPagoDto.OrderRequest.Identification("CPF", form.cpf())
+                ),
                 new MercadoPagoDto.OrderRequest.Transactions(List.of(
                         new MercadoPagoDto.OrderRequest.Payment(
                                 valorFormatado,
@@ -48,21 +75,36 @@ public class PagamentoService {
                 ))
         );
 
-        // 2) Chama o MP
+        log.debug("Enviando requisição para criação da ordem no Mercado Pago.");
+
         MercadoPagoDto.OrderResponse order = mercadoPagoService.criarOrder(request);
 
-        // 3) Persiste o PagamentoModel
+        log.info(
+                "Ordem criada no Mercado Pago. OrderId: {}, Status: {}",
+                order.id(),
+                order.status());
+
         PagamentoModel pagamento = new PagamentoModel();
         pagamento.setValorPagamento(form.valor());
         pagamento.setIdPagamentoExterno(order.id());
-        pagamento.setTipoPagamento(TipoPagamentoEnum.PIX);            // <-- ajuste ao seu enum
+        pagamento.setTipoPagamento(TipoPagamentoEnum.PIX);
         pagamento.setStatusPagamento(mapearStatus(order.status()));
-        // pagamento.setEmitidoPor(usuarioLogado);                    // setar o usuário responsável
-        // pagamento.setDataLimitePagamento(LocalDateTime.now().plusMinutes(30)); // se aplicável
+        pagamento.setDataLimitePagamento(LocalDateTime.now().plusWeeks(1));
+        pagamento.setEmitidoPor(usuario);
+
+        return getPagamentoPixResponse(order, pagamento);
+    }
+
+    public PagamentoDto.@NonNull PagamentoPixResponse getPagamentoPixResponse(MercadoPagoDto.OrderResponse order, PagamentoModel pagamento) {
         pagamentoRepository.save(pagamento);
 
-        // 4) Extrai o QR e devolve
+        log.info(
+                "Pagamento salvo com sucesso. Id interno: {}, OrderId: {}",
+                pagamento.getId(),
+                pagamento.getIdPagamentoExterno());
+
         MercadoPagoDto.OrderResponse.PaymentMethod pm = extrairPaymentMethod(order);
+
         return new PagamentoDto.PagamentoPixResponse(
                 pagamento.getId(),
                 order.id(),
@@ -74,14 +116,98 @@ public class PagamentoService {
         );
     }
 
-    /** Reconsulta a order no MP e atualiza o status local. */
+    /**
+     * Cria uma cobrança PIX utilizando o Mercado Pago e persiste as informações
+     * do pagamento em banco de dados.
+     * <p>
+     * O fluxo consiste em:
+     * <ol>
+     *     <li>Criar a ordem de pagamento no Mercado Pago;</li>
+     *     <li>Persistir o pagamento localmente;</li>
+     *     <li>Retornar os dados necessários para pagamento via PIX.</li>
+     * </ol>
+     *
+     * @param form Dados necessários para criação da cobrança.
+     * @return Informações da cobrança PIX.
+     */
+    @Transactional
+    public PagamentoDto.PagamentoPixResponse criarPagamentoPix(PagamentoDto.CriarPagamentoPixForm form) {
+
+        log.info(
+                "Iniciando geração de pagamento PIX. Consulta: {}, CPF: {}, Valor: {}",
+                form.externalReference(),
+                form.cpf(),
+                form.valor());
+
+        String valorFormatado = formatarValor(form.valor());
+
+        var request = new MercadoPagoDto.OrderRequest(
+                "online",
+                form.externalReference(),
+                "automatic",
+                valorFormatado,
+                form.descricao(),
+                new MercadoPagoDto.OrderRequest.Payer(
+                        form.emailPagador(),
+                        form.nomePagador(),
+                        new MercadoPagoDto.OrderRequest.Identification("CPF", form.cpf())
+                ),
+                new MercadoPagoDto.OrderRequest.Transactions(List.of(
+                        new MercadoPagoDto.OrderRequest.Payment(
+                                valorFormatado,
+                                new MercadoPagoDto.OrderRequest.PaymentMethod("pix", "bank_transfer")
+                        )
+                ))
+        );
+
+        log.debug("Enviando requisição para criação da ordem no Mercado Pago.");
+
+        MercadoPagoDto.OrderResponse order = mercadoPagoService.criarOrder(request);
+
+        log.info(
+                "Ordem criada no Mercado Pago. OrderId: {}, Status: {}",
+                order.id(),
+                order.status());
+
+        PagamentoModel pagamento = new PagamentoModel();
+        pagamento.setValorPagamento(form.valor());
+        pagamento.setIdPagamentoExterno(order.id());
+        pagamento.setTipoPagamento(TipoPagamentoEnum.PIX);
+        pagamento.setStatusPagamento(mapearStatus(order.status()));
+
+        return getPagamentoPixResponse(order, pagamento);
+    }
+
+    /**
+     * Consulta o status atualizado de um pagamento.
+     * <p>
+     * A consulta é realizada tanto na base local quanto na API do Mercado Pago.
+     * Caso o status tenha sido alterado, o registro local é atualizado.
+     *
+     * @param pagamentoId Identificador interno do pagamento.
+     * @return Status atualizado do pagamento.
+     */
     @Transactional
     public PagamentoDto.StatusPagamentoResponse consultarStatus(Long pagamentoId) {
-        PagamentoModel pagamento = pagamentoRepository.findById(pagamentoId)
-                .orElseThrow(() -> new EntityNotFoundException("Pagamento não encontrado: " + pagamentoId));
 
-        MercadoPagoDto.OrderResponse order = mercadoPagoService.buscarOrder(pagamento.getIdPagamentoExterno());
+        log.info("Consultando status do pagamento {}.", pagamentoId);
+
+        PagamentoModel pagamento = pagamentoRepository.findById(pagamentoId)
+                .orElseThrow(() -> {
+                    log.warn("Pagamento {} não encontrado.", pagamentoId);
+                    return new EntityNotFoundException("Pagamento não encontrado: " + pagamentoId);
+                });
+
+        MercadoPagoDto.OrderResponse order =
+                mercadoPagoService.buscarOrder(pagamento.getIdPagamentoExterno());
+
         atualizarPagamento(pagamento, order);
+
+        log.info(
+                "Status atualizado. Pagamento: {}, Status interno: {}, Status Mercado Pago: {}",
+                pagamento.getId(),
+                pagamento.getStatusPagamento(),
+                order.status());
 
         return new PagamentoDto.StatusPagamentoResponse(
                 pagamento.getId(),
@@ -92,45 +218,111 @@ public class PagamentoService {
         );
     }
 
+    public MercadoPagoDto.OrderResponse buscarPagamentoPix(Long idPagamento) {
+        log.info("Consultando status do pagamento {}.", idPagamento);
+
+        PagamentoModel pagamento = pagamentoRepository.findById(idPagamento)
+                .orElseThrow(() -> {
+                    log.warn("Pagamento {} não encontrado.", idPagamento);
+                    return new EntityNotFoundException("Pagamento não encontrado: " + idPagamento);
+                });
+
+        return mercadoPagoService.buscarOrder(pagamento.getIdPagamentoExterno());
+    }
+
     /**
-     * Processa a notificação de webhook.
-     * OBS: dependendo do "type" da notificação, o data.id pode ser um id de order (ORD...)
-     * ou de pagamento (PAY...). Aqui procuramos pelo id externo salvo (order id).
-     * Valide com notificações reais e ajuste se o MP enviar o id do pagamento.
+     * Processa notificações enviadas pelo webhook do Mercado Pago.
+     * <p>
+     * Ao receber uma notificação, o serviço localiza o pagamento correspondente,
+     * consulta o status atualizado na API do Mercado Pago e sincroniza as
+     * informações armazenadas localmente.
+     *
+     * @param idRecebido Identificador enviado pelo Mercado Pago.
      */
     @Transactional
     public void processarWebhook(String idRecebido) {
-        pagamentoRepository.findByIdPagamentoExterno(idRecebido).ifPresent(pagamento -> {
-            MercadoPagoDto.OrderResponse order = mercadoPagoService.buscarOrder(idRecebido);
-            atualizarPagamento(pagamento, order);
-        });
-    }
 
-    // ----------------- auxiliares -----------------
+        log.info("Webhook recebido. Id externo: {}", idRecebido);
 
-    private void atualizarPagamento(PagamentoModel pagamento, MercadoPagoDto.OrderResponse order) {
-        StatusPagamentoEnum novoStatus = mapearStatus(order.status());
-        pagamento.setStatusPagamento(novoStatus);
+        pagamentoRepository.findByIdPagamentoExterno(idRecebido)
+                .ifPresentOrElse(pagamento -> {
 
-        // Marca a data do pagamento só quando ele é efetivamente aprovado.
-        if (novoStatus == StatusPagamentoEnum.PAGO && pagamento.getDataPagamento() == null) {
-            pagamento.setDataPagamento(LocalDateTime.now());
-        }
-        pagamentoRepository.save(pagamento);
+                    log.info(
+                            "Pagamento localizado para processamento do webhook. Id interno: {}",
+                            pagamento.getId());
+
+                    MercadoPagoDto.OrderResponse order =
+                            mercadoPagoService.buscarOrder(idRecebido);
+
+                    atualizarPagamento(pagamento, order);
+
+                    log.info(
+                            "Webhook processado com sucesso. Pagamento: {}, Novo status: {}",
+                            pagamento.getId(),
+                            pagamento.getStatusPagamento());
+
+                }, () -> log.warn(
+                        "Webhook recebido para OrderId {} sem pagamento correspondente.",
+                        idRecebido));
     }
 
     /**
-     * Mapeia o status do Mercado Pago para o SEU StatusPagamentoEnum.
-     * >>> AJUSTE os valores da direita conforme os que existem no seu enum. <<<
-     * (Você só me confirmou PENDENTE; os demais são suposições.)
+     * Atualiza o status do pagamento local de acordo com o status retornado pelo
+     * Mercado Pago.
+     *
+     * @param pagamento Pagamento persistido.
+     * @param order Ordem retornada pela API do Mercado Pago.
+     */
+    private void atualizarPagamento(PagamentoModel pagamento,
+                                    MercadoPagoDto.OrderResponse order) {
+
+        StatusPagamentoEnum statusAnterior = pagamento.getStatusPagamento();
+        StatusPagamentoEnum novoStatus = mapearStatus(order.status());
+
+        pagamento.setStatusPagamento(novoStatus);
+
+        if (novoStatus == StatusPagamentoEnum.PAGO &&
+                pagamento.getDataPagamento() == null) {
+
+            pagamento.setDataPagamento(LocalDateTime.now());
+
+            log.info(
+                    "Pagamento {} confirmado em {}.",
+                    pagamento.getId(),
+                    pagamento.getDataPagamento());
+        }
+
+        pagamentoRepository.save(pagamento);
+
+        if (statusAnterior != novoStatus) {
+            log.info(
+                    "Status alterado. Pagamento: {}, {} -> {}",
+                    pagamento.getId(),
+                    statusAnterior,
+                    novoStatus);
+        } else {
+            log.debug(
+                    "Pagamento {} permanece com status {}.",
+                    pagamento.getId(),
+                    novoStatus);
+        }
+    }
+
+    /**
+     * Converte o status retornado pelo Mercado Pago para o
+     * {@link StatusPagamentoEnum} utilizado pela aplicação.
+     *
+     * @param statusMp Status retornado pela API do Mercado Pago.
+     * @return Status equivalente utilizado internamente.
      */
     private StatusPagamentoEnum mapearStatus(String statusMp) {
+
         if (statusMp == null) {
             return StatusPagamentoEnum.PENDENTE;
         }
+
         return switch (statusMp) {
             case "processed" -> StatusPagamentoEnum.PAGO;
-            case "created", "action_required", "processing" -> StatusPagamentoEnum.PENDENTE;
             case "canceled", "cancelled", "expired" -> StatusPagamentoEnum.CANCELADO;
             case "refunded" -> StatusPagamentoEnum.DEVOLVIDO;
             case "failed", "rejected" -> StatusPagamentoEnum.RECUSADO;
@@ -138,17 +330,33 @@ public class PagamentoService {
         };
     }
 
-    private MercadoPagoDto.OrderResponse.PaymentMethod extrairPaymentMethod(MercadoPagoDto.OrderResponse order) {
+    /**
+     * Obtém o primeiro método de pagamento retornado pelo Mercado Pago.
+     *
+     * @param order Ordem consultada.
+     * @return Método de pagamento ou {@code null} caso não exista.
+     */
+    private MercadoPagoDto.OrderResponse.PaymentMethod extrairPaymentMethod(
+            MercadoPagoDto.OrderResponse order) {
+
         if (order.transactions() == null
                 || order.transactions().payments() == null
                 || order.transactions().payments().isEmpty()) {
+
+            log.debug("Ordem {} não possui método de pagamento.", order.id());
             return null;
         }
-        return order.transactions().payments().get(0).paymentMethod();
+
+        return order.transactions().payments().getFirst().paymentMethod();
     }
 
+    /**
+     * Formata um valor monetário para o padrão esperado pela API do Mercado Pago.
+     *
+     * @param valor Valor original.
+     * @return Valor com duas casas decimais.
+     */
     private String formatarValor(BigDecimal valor) {
-        // Garante sempre 2 casas: 200 -> "200.00"
         return valor.setScale(2, RoundingMode.HALF_UP).toPlainString();
     }
 }
